github pages fix.

--- a/html/comments.html
+++ b/html/comments.html
@@ -10,7 +10,7 @@
         <div id="nav">
             <ul>
                 <li class="navHead">Comments</li>
-                <li class="navSub"><a href="index.html" id="submitNav1">Home</a></li>
+                <li class="navSub"><a href="../index.html" id="submitNav1">Home</a></li>
                 <li class="navSub"><a href="colorTheory.html" id="submitNav2">Color Theory</a></li>
                 <li class="navSub"><a href="formsOfArt.html" id="submitNav3">Forms Of Art</a></li>
                 <li class="navSub"><a href="painting.html" id="submitNav4">Painting</a></li>
