--- a/html/formsOfArt.html
+++ b/html/formsOfArt.html
@@ -41,7 +41,7 @@
 
         <!--Content -->
         <div>
-            <di style="padding-top:0%">
+            <div style="padding-top:0%">
                 <p id="header" class="left">Forms Of Art</p>
                 <p id="text" class="left" style="padding-left:10%">Through our history many forms of art have developed in our society so much so that the line of the arts and society have become somewhat blured. From the designs of the tallest skyscrapers to the smaller actions we make like how one would set their plant to make their desk more aesthetically pleasing. We will therefore not be going over what counts as art but rather the creative outlets we have devoleped</p>
             </div>
